# dnb-urn-service

./: CHANGES.rst  README.rst  pytest.ini  run-tests.sh  setup.cfg  setup.py
dnb_urn_service/: __init__.py  errors.py  request.py  rest_client.py  version.py
dnb_urn_service/tests/: conftest.py  helpers.py  test_urn_get.py  test_urn_post.py  test_urn_service.py
