# -*- coding: utf-8 -*-
#
# Copyright (C) 2022, 2023 University of Münster.
#
# Invenio-Dnb-Urn is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = dnb-urn-service
version = attr: dnb_urn_service.__version__
description = "Wrapper around URN REST API by DNB."
long_description = file: README.rst
keywords = invenio rdm data model
license = MIT
author = University Münster
author_email = gressho@uni-muenster.de
platforms = any
url = https://github.com/ulbmuenster/dnb-urn-service
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    jsonschema>=3.0.0
    lxml>=4.5.0
    requests>=2.12.2
    idutils>=1.2.0

[options.extras_require]
tests =
    responses>=0.10.6
    mock>=1.3.0
    pytest>=7.1.3
    pytest-invenio>=1.4.0

[options.entry_points]

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

#[compile_catalog]
#directory = invenio_invenio_serializer_epicur/translations/
#use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_dnb_urn/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_dnb_urn/translations/messages.pot
output-dir = invenio_dnb_urn/translations/

[update_catalog]
input-file = invenio_dnb_urn/translations/messages.pot
output-dir = invenio_dnb_urn/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_dnb_urn --cov-report=term-missing
testpaths = tests dnb_urn_service
